# firmware

./: Cargo.toml  Embed.toml  build.rs
.cargo/: config.toml
drivers/motion/: Cargo.toml
drivers/motion/src/: lib.rs  motion.rs
drivers/motor/: Cargo.toml
drivers/motor/src/: lib.rs  motor.rs  pid.rs  rp235x_pkg.rs
examples/: imu_test.rs  irq_blinky.rs  rtic_blinky.rs
src/: main.rs  status.rs
