[package]
authors = ["celcius-plus-273"]
description = "Firmware for Lil-G's Motion Control"
edition = "2021"
license = "MIT"
name = "lil-g-firmware"
repository = "https://github.com/Lil-G-Robot/firmware"
rust-version = "1.81"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
critical-section = {version = "1.2.0"}
defmt = "0.3"
defmt-rtt = "0.4.0"
embedded-alloc = "0.5.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}
# fugit = "0.3.6"
# futures = {version = "0.3.30", default-features = false, features = ["async-await"]}
panic-halt = "0.2.0"
pio = "0.3.0"
rp235x-hal = {version = "0.3.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"]}
# The examples use features not yet available in rp-binary-info 0.1.0,
# so the minimum version implied by the rp235x-hal 0.3.0 dependency is not sufficient.
rp-binary-info = "0.1.1"

[target.'cfg( target_arch = "arm" )'.dependencies]
# embassy-executor = {version = "0.5", features = ["arch-cortex-m", "executor-thread"]}
