[package]
authors = ["celcius-plus-273"]
description = "Firmware for Lil-G's Motion Control"
edition = "2021"
license = "MIT"
repository = "https://github.com/Lil-G-Robot/firmware"
name = "firmware-main"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
defmt = "0.3"
defmt-rtt = "0.3"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
fugit = "0.3.6"
futures = {version = "0.3.30", default-features = false, features = ["async-await"]}
panic-halt = "0.2.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
pio = "0.3.0"
rp235x-hal = {version = "0.3.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"]}
# The examples use features not yet available in rp-binary-info 0.1.0,
# so the minimum version implied by the rp235x-hal 0.3.0 dependency is not sufficient.
rp-binary-info = "0.1.1"

# IMU driver
icm20948_driver = "0.2.0"

[dependencies.rtic]
version = "2.0.0"
features = ["thumbv8main-backend"]

[dependencies.rtic-monotonics]
version = "2.0.0"
features = ["rp235x"]

# local drivers
[dependencies.motion-control]
path = "drivers/motion"

[dependencies.motor-driver]
path = "drivers/motor"
features = ["rp235x"]
[target.'cfg( target_arch = "arm" )'.dependencies]
# embassy-executor = {version = "0.5", features = ["arch-cortex-m", "executor-thread"]}
